--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ gspread==6.0.0
 oauth2client==4.1.3
 pandas==2.1.4
 geopy==2.4.1
-folium==0.14.0
 streamlit-folium==0.16.0
+folium==0.15.1
+requests==2.31.0
