--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 streamlit==1.31.0
 gspread==6.0.0
-oauth2client==4.1.3
+google-auth==2.23.0
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
 pandas==2.1.4
 geopy==2.4.1
+folium==0.14.0
 streamlit-folium==0.16.0
-folium==0.15.1
-requests==2.31.0
+requests
